--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -44,7 +44,8 @@
     "@types/color-namer": "^1.3.0",
     "@types/hls.js": "^0.13.3",
     "@types/jest": "^27.0.2",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "typescript": "^4.4.4"
   },
   "browserslist": {
     "production": [
