--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -39,6 +39,7 @@
     "ts-jest": "^27.0.5"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
     "@docusaurus/module-type-aliases": "2.0.0-beta.7",
     "@tsconfig/docusaurus": "^1.0.4",
     "@types/color-namer": "^1.3.0",
