--- a/packages/media-utils/.eslintrc
+++ b/packages/media-utils/.eslintrc
@@ -1,11 +1,6 @@
 {
 	"extends": "@jonny",
-	"parserOptions": {
-		"project": "./tsconfig.json"
-	},
 	"rules": {
-		"arrow-body-style": "off",
-		"no-bitwise": "off",
-		"ts-exports/unused-exports": "off"
+		"no-bitwise": "off"
 	}
 }
