--- a/packages/bundler/.eslintrc
+++ b/packages/bundler/.eslintrc
@@ -1,7 +1,3 @@
 {
-	"extends": "@jonny",
-	"rules": {
-		"arrow-body-style": "off",
-		"ts-exports/unused-exports": "off"
-	}
+	"extends": "@jonny"
 }
