--- a/packages/three/.eslintrc
+++ b/packages/three/.eslintrc
@@ -1,10 +1,3 @@
 {
-	"extends": "@jonny",
-	"parserOptions": {
-		"project": "./tsconfig.json"
-	},
-	"rules": {
-		"arrow-body-style": "off",
-		"ts-exports/unused-exports": "off"
-	}
+	"extends": "@jonny"
 }
