--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -11,7 +11,7 @@
 	"scripts": {
 		"test": "eslint src --ext ts,tsx && tsc -d && jest",
 		"watch": "tsc -w",
-		"build": "tsc -d",
+		"build": "tsc -d && pnpm run buildlambda",
 		"buildlambda": "ts-node src/admin/bundle-lambda.ts",
 		"start": "ts-node src/run.ts"
 	},
