--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-alpha.4",
+  "version": "2.4.3",
   "private": true,
   "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
