--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,8 @@ publish = "packages/docs/build"
 
 [build.environment]
 NPM_FLAGS="--prefix=/dev/null"
+NODE_VERSION = "14.15.3" 
 
 [[plugins]]
 package = "/.netlify/netlify-plugin-pnpm"
+
