--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/lambda",
-	"version": "2.4.3",
+	"version": "2.4.4",
 	"description": "Utility functions for audio and video",
 	"main": "dist/index.js",
 	"sideEffects": false,
@@ -25,15 +25,15 @@
 		"@aws-sdk/client-lambda": "^3.18.0",
 		"@aws-sdk/client-s3": "^3.18.0",
 		"@aws-sdk/lib-storage": "^3.18.0",
-		"@remotion/bundler": "^2.1.4",
-		"@remotion/cli": "^2.1.4",
-		"@remotion/renderer": "^2.1.4",
+		"@remotion/bundler": "^2.4.4",
+		"@remotion/cli": "^2.4.4",
+		"@remotion/renderer": "^2.4.4",
 		"aws-policies": "^1.0.1",
 		"dotenv": "^10.0.0",
 		"minimist": "^1.2.5",
 		"p-limit": "^3.1.0",
 		"prompt": "^1.1.0",
-		"remotion": "^2.1.4"
+		"remotion": "^2.4.4"
 	},
 	"peerDependencies": {
 		"react": "^17.0.1",
@@ -41,18 +41,18 @@
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.242",
+		"@types/jest": "^27.0.2",
 		"@types/node": "^14.14.14",
 		"@types/prompt": "^1.1.0",
-		"@types/jest": "^27.0.2",
 		"esbuild": "^0.11.12",
-		"zip-lib": "^0.7.2",
 		"eslint": "^7.32.0",
 		"jest": "^27.2.4",
 		"prettier": "^2.4.1",
 		"prettier-plugin-organize-imports": "^2.3.4",
 		"ts-jest": "^27.0.5",
 		"ts-node": "^9.1.1",
-		"typescript": "^4.4.3"
+		"typescript": "^4.4.3",
+		"zip-lib": "^0.7.2"
 	},
 	"publishConfig": {
 		"access": "public"
