require exact version of a remotion package
Former-commit-id: 93aa14f28ccb7a2313ee592ca8a3f2b2d28f90e8

--- a/packages/media-utils/package.json
+++ b/packages/media-utils/package.json
@@ -15,7 +15,7 @@
 		"url": "https://github.com/remotion-dev/remotion"
 	},
 	"dependencies": {
-		"remotion": "^2.4.3"
+		"remotion": "2.4.3"
 	},
 	"peerDependencies": {
 		"react": "^17.0.1",
