--- a/packages/babel-loader/package.json
+++ b/packages/babel-loader/package.json
@@ -33,7 +33,7 @@
 		"eslint": "^7.25.0",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
-		"remotion": "^2.4.3",
+		"remotion": "2.4.3",
 		"typescript": "^4.4.2"
 	},
 	"publishConfig": {
