--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,13 +18,13 @@
     "@docusaurus/plugin-content-blog": "2.0.0-beta.7",
     "@docusaurus/preset-classic": "2.0.0-beta.7",
     "@mdx-js/react": "^1.6.21",
-    "@remotion/babel-loader": "^2.4.3",
-    "@remotion/bundler": "^2.4.3",
-    "@remotion/gif": "^2.4.3",
-    "@remotion/media-utils": "^2.4.3",
-    "@remotion/player": "^2.4.3",
-    "@remotion/renderer": "^2.4.3",
-    "@remotion/three": "^2.4.3",
+    "@remotion/babel-loader": "2.4.3",
+    "@remotion/bundler": "2.4.3",
+    "@remotion/gif": "2.4.3",
+    "@remotion/media-utils": "2.4.3",
+    "@remotion/player": "2.4.3",
+    "@remotion/renderer": "2.4.3",
+    "@remotion/three": "2.4.3",
     "@splitbee/web": "^0.2.4",
     "chalk": "^4.1.0",
     "clipboard": "^2.0.8",
@@ -35,7 +35,7 @@
     "jest": "^27.2.4",
     "polished": "4.1.2",
     "react-player": "^2.9.0",
-    "remotion": "^2.4.3",
+    "remotion": "2.4.3",
     "ts-jest": "^27.0.5"
   },
   "devDependencies": {
