--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -17,12 +17,12 @@
 	},
 	"dependencies": {
 		"@testing-library/dom": "^8.7.2",
-		"@remotion/bundler": "^2.4.3",
+		"@remotion/bundler": "2.4.3",
 		"execa": "^4.0.2",
 		"got": "11.8.2",
 		"p-limit": "^3.1.0",
 		"puppeteer-core": "^10.2.0",
-		"remotion": "^2.4.3",
+		"remotion": "2.4.3",
 		"sanitize-filename": "^1.6.3",
 		"serve-handler": "^6.1.3",
 		"xns": "^2.0.7"
