--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -25,15 +25,15 @@
 		"@aws-sdk/client-lambda": "^3.18.0",
 		"@aws-sdk/client-s3": "^3.18.0",
 		"@aws-sdk/lib-storage": "^3.18.0",
-		"@remotion/bundler": "^2.4.4",
-		"@remotion/cli": "^2.4.4",
-		"@remotion/renderer": "^2.4.4",
+		"@remotion/bundler": "2.4.4",
+		"@remotion/cli": "2.4.4",
+		"@remotion/renderer": "2.4.4",
 		"aws-policies": "^1.0.1",
 		"dotenv": "^10.0.0",
 		"minimist": "^1.2.5",
 		"p-limit": "^3.1.0",
 		"prompt": "^1.1.0",
-		"remotion": "^2.4.4"
+		"remotion": "2.4.4"
 	},
 	"peerDependencies": {
 		"react": "^17.0.1",
