--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@remotion/bundler": "2.4.4",
     "remotion": "2.4.4",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "esbuild": "^0.13.8"
   },
   "dependencies": {
     "@react-three/fiber": "^6.1.2",
