--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs",
-  "version": "2.4.3",
+  "version": "2.5.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -17,25 +17,25 @@
     "@docusaurus/core": "2.0.0-beta.7",
     "@docusaurus/plugin-content-blog": "2.0.0-beta.7",
     "@docusaurus/preset-classic": "2.0.0-beta.7",
+    "@jonny/docusaurus-preset-shiki-twoslash": "1.1.36",
     "@mdx-js/react": "^1.6.21",
-    "@remotion/babel-loader": "2.4.3",
-    "@remotion/bundler": "2.4.3",
-    "@remotion/gif": "2.4.3",
-    "@remotion/media-utils": "2.4.3",
-    "@remotion/player": "2.4.3",
-    "@remotion/renderer": "2.4.3",
-    "@remotion/three": "2.4.3",
+    "@remotion/babel-loader": "^2.5.0",
+    "@remotion/bundler": "^2.5.0",
+    "@remotion/gif": "^2.5.0",
+    "@remotion/media-utils": "^2.5.0",
+    "@remotion/player": "^2.5.0",
+    "@remotion/renderer": "^2.5.0",
+    "@remotion/three": "^2.5.0",
     "@splitbee/web": "^0.2.4",
     "chalk": "^4.1.0",
     "clipboard": "^2.0.8",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
-    "@jonny/docusaurus-preset-shiki-twoslash": "1.1.36",
     "hls.js": "^0.14.17",
     "jest": "^27.2.4",
     "polished": "4.1.2",
     "react-player": "^2.9.0",
-    "remotion": "2.4.3",
+    "remotion": "^2.5.0",
     "ts-jest": "^27.0.5"
   },
   "devDependencies": {
@@ -44,8 +44,8 @@
     "@types/color-namer": "^1.3.0",
     "@types/hls.js": "^0.13.3",
     "@types/jest": "^27.0.2",
-    "url-loader": "^4.1.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "url-loader": "^4.1.1"
   },
   "browserslist": {
     "production": [
