--- a/packages/media-utils/package.json
+++ b/packages/media-utils/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/media-utils",
-	"version": "2.4.3",
+	"version": "2.5.0",
 	"description": "Utility functions for audio and video",
 	"main": "dist/index.js",
 	"sideEffects": false,
@@ -15,7 +15,7 @@
 		"url": "https://github.com/remotion-dev/remotion"
 	},
 	"dependencies": {
-		"remotion": "2.4.3"
+		"remotion": "^2.5.0"
 	},
 	"peerDependencies": {
 		"react": "^17.0.1",
