--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,17 +19,17 @@
 	"author": "Jonny Burger <jonny@remotion.dev>",
 	"license": "SEE LICENSE IN LICENSE.md",
 	"dependencies": {
-		"@remotion/bundler": "^2.5.0",
-		"@remotion/media-utils": "^2.5.0",
-		"@remotion/player": "^2.5.0",
-		"@remotion/renderer": "^2.5.0",
+		"@remotion/bundler": "2.5.0",
+		"@remotion/media-utils": "2.5.0",
+		"@remotion/player": "2.5.0",
+		"@remotion/renderer": "2.5.0",
 		"ansi-diff": "^1.1.1",
 		"better-opn": "^2.1.1",
 		"chalk": "^4.1.0",
 		"dotenv": "^9.0.0",
 		"execa": "^4.0.2",
 		"minimist": "^1.2.5",
-		"remotion": "^2.5.0",
+		"remotion": "2.5.0",
 		"semver": "^7.3.4",
 		"webpack": "5.60.0",
 		"xns": "^2.0.7"
