--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -24,15 +24,15 @@
 		"@babel/preset-react": "7.12.13",
 		"@mdx-js/react": "^1.6.21",
 		"@react-three/drei": "^4.3.3",
-		"@remotion/babel-loader": "^2.5.0",
-		"@remotion/bundler": "^2.5.0",
-		"@remotion/cli": "^2.5.0",
-		"@remotion/eslint-config": "^2.5.0",
-		"@remotion/eslint-plugin": "^2.5.0",
-		"@remotion/gif": "^2.5.0",
-		"@remotion/media-utils": "^2.5.0",
-		"@remotion/renderer": "^2.5.0",
-		"@remotion/three": "^2.5.0",
+		"@remotion/babel-loader": "2.5.0",
+		"@remotion/bundler": "2.5.0",
+		"@remotion/cli": "2.5.0",
+		"@remotion/eslint-config": "2.5.0",
+		"@remotion/eslint-plugin": "2.5.0",
+		"@remotion/gif": "2.5.0",
+		"@remotion/media-utils": "2.5.0",
+		"@remotion/renderer": "2.5.0",
+		"@remotion/three": "2.5.0",
 		"@types/express": "^4.17.11",
 		"@types/node": "^16.7.5",
 		"@types/styled-components": "^5.1.1",
@@ -41,7 +41,7 @@
 		"mdx-loader": "3.0.2",
 		"polished": "^4.0.5",
 		"prettier": "^2.0.5",
-		"remotion": "^2.5.0",
+		"remotion": "2.5.0",
 		"styled-components": "^5.1.1",
 		"svg-path-properties": "^1.0.4",
 		"three": ">=0.128.0",
