--- a/packages/three/package.json
+++ b/packages/three/package.json
@@ -17,7 +17,7 @@
 		"url": "https://github.com/remotion-dev/remotion"
 	},
 	"dependencies": {
-		"remotion": "^2.5.0"
+		"remotion": "2.5.0"
 	},
 	"peerDependencies": {
 		"@react-three/fiber": ">=6.0.14",
