--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
   },
   "devDependencies": {
     "@jonny/eslint-config": "^2.1.248",
+    "@remotion/babel-loader": "2.5.0",
+    "@remotion/bundler": "2.5.0",
+    "@remotion/cli": "2.5.0",
+    "@remotion/gif": "2.5.0",
+    "@remotion/media-utils": "2.5.0",
+    "@remotion/player": "2.5.0",
+    "@remotion/renderer": "2.5.0",
+    "@remotion/three": "2.5.0",
     "@types/jest": "^27.0.2",
     "@types/minimist": "^1.2.1",
     "@types/node": "^16.7.5",
@@ -26,16 +34,8 @@
     "jest-environment-jsdom": "^27.2.4",
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
-    "sharp": "^0.29.0",
-    "@remotion/babel-loader": "2.5.0",
-    "@remotion/three": "2.5.0",
-    "@remotion/player": "2.5.0",
-    "@remotion/gif": "2.5.0",
-    "@remotion/cli": "2.5.0",
-    "@remotion/media-utils": "2.5.0",
-    "@remotion/renderer": "2.5.0",
-    "@remotion/bundler": "2.5.0",
     "remotion": "2.5.0",
+    "sharp": "^0.29.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   },
@@ -44,6 +44,7 @@
     "lerna": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "regenerator-runtime": "^0.13.9",
     "three": "^0.128.0"
   },
   "name": "remotion"
