--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -23,12 +23,12 @@
 		"@jonny/webpack-dev-middleware": "^4.1.3",
 		"@webhotelier/webpack-fast-refresh": "5.1.0",
 		"css-loader": "^5.0.1",
-		"esbuild-loader": "^2.10.0",
 		"execa": "^4.0.3",
 		"express": "^4.17.1",
 		"file-loader": "^6.0.0",
 		"latest-version": "^5.1.0",
 		"react-refresh": "^0.9.0-rc.2",
+		"regenerator-runtime": "^0.13.9",
 		"remotion": "2.5.0",
 		"semver": "7.3.4",
 		"style-loader": "^2.0.0",
@@ -41,12 +41,14 @@
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.248",
+		"@swc/core": "^1.2.103",
 		"@types/express": "^4.17.7",
 		"@types/node": "^16.7.5",
 		"@types/semver": "^7.3.4",
 		"eslint": "^7.25.0",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
+		"swc-loader": "^0.1.15",
 		"typescript": "^4.4.2"
 	},
 	"publishConfig": {
