--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -21,19 +21,22 @@
 	"license": "SEE LICENSE IN LICENSE.md",
 	"dependencies": {
 		"@jonny/webpack-dev-middleware": "^4.1.3",
-		"@webhotelier/webpack-fast-refresh": "5.1.0",
+		"@types/ws": "^8.2.0",
 		"css-loader": "^5.0.1",
 		"esbuild-loader": "^2.10.0",
 		"execa": "^4.0.3",
 		"express": "^4.17.1",
 		"file-loader": "^6.0.0",
 		"latest-version": "^5.1.0",
+		"react-dev-utils": "^11.0.4",
+		"react-error-overlay": "^6.0.9",
 		"react-refresh": "^0.9.0-rc.2",
 		"remotion": "2.5.0",
 		"semver": "7.3.4",
 		"style-loader": "^2.0.0",
 		"webpack": "5.60.0",
-		"webpack-hot-middleware": "^2.25.0"
+		"webpack-hot-middleware": "^2.25.0",
+		"ws": "^8.2.3"
 	},
 	"peerDependencies": {
 		"react": "^17.0.1",
@@ -41,12 +44,14 @@
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.248",
+		"@swc/core": "^1.2.103",
 		"@types/express": "^4.17.7",
 		"@types/node": "^16.7.5",
 		"@types/semver": "^7.3.4",
 		"eslint": "^7.25.0",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
+		"swc-loader": "^0.1.15",
 		"typescript": "^4.4.2"
 	},
 	"publishConfig": {
