--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -51,11 +51,13 @@
 		"xns": "^2.0.7"
 	},
 	"devDependencies": {
+		"@swc/core": "^1.2.103",
 		"@types/babel__core": "^7.1.12",
 		"@types/babel__template": "^7.4.0",
 		"eslint": "^7.25.0",
 		"jest": "^27.0.6",
 		"prettier-plugin-organize-imports": "^1.1.1",
+		"swc-loader": "^0.1.15",
 		"ts-jest": "^27.0.5"
 	},
 	"publishConfig": {
