--- a/packages/babel-loader/package.json
+++ b/packages/babel-loader/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/babel-loader",
-	"version": "2.5.0",
+	"version": "2.5.1",
 	"description": "babel-loader polyfill for Remotion",
 	"main": "dist/index.js",
 	"scripts": {
@@ -33,7 +33,7 @@
 		"eslint": "^7.25.0",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
-		"remotion": "2.5.0",
+		"remotion": "^2.5.1",
 		"typescript": "^4.4.2"
 	},
 	"publishConfig": {
