--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -19,13 +19,13 @@
     "@docusaurus/preset-classic": "2.0.0-beta.7",
     "@jonny/docusaurus-preset-shiki-twoslash": "1.1.36",
     "@mdx-js/react": "^1.6.21",
-    "@remotion/babel-loader": "2.5.0",
-    "@remotion/bundler": "2.5.0",
-    "@remotion/gif": "2.5.0",
-    "@remotion/media-utils": "2.5.0",
-    "@remotion/player": "2.5.0",
-    "@remotion/renderer": "2.5.0",
-    "@remotion/three": "2.5.0",
+    "@remotion/babel-loader": "^2.5.1",
+    "@remotion/bundler": "^2.5.1",
+    "@remotion/gif": "^2.5.1",
+    "@remotion/media-utils": "^2.5.1",
+    "@remotion/player": "^2.5.1",
+    "@remotion/renderer": "^2.5.1",
+    "@remotion/three": "^2.5.1",
     "@splitbee/web": "^0.2.4",
     "chalk": "^4.1.0",
     "clipboard": "^2.0.8",
@@ -35,7 +35,7 @@
     "jest": "^27.2.4",
     "polished": "4.1.2",
     "react-player": "^2.9.0",
-    "remotion": "2.5.0",
+    "remotion": "^2.5.1",
     "ts-jest": "^27.0.5"
   },
   "devDependencies": {
