--- a/packages/gif/package.json
+++ b/packages/gif/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/gif",
-	"version": "2.5.0",
+	"version": "2.5.1",
 	"description": "Gif component for remotion",
 	"sideEffects": false,
 	"repository": {
@@ -20,7 +20,7 @@
 	"dependencies": {
 		"@react-gifs/tools": "^0.1.1",
 		"lru_map": "^0.4.1",
-		"remotion": "2.5.0"
+		"remotion": "^2.5.1"
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.248",
