--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "pnpm run test --recursive && jest --runInBand",
     "build": "pnpm run build --recursive",
     "watch": "pnpm run watch --recursive --stream --parallel",
-    "postinstall": "lerna bootstrap"
+    "postinstall": "lerna bootstrap",
+    "release": "npx lerna publish --force-publish"
   },
   "engines": {
     "node": ">=12",
@@ -27,15 +28,15 @@
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
     "sharp": "^0.29.0",
-    "@remotion/babel-loader": "2.5.0",
-    "@remotion/three": "2.5.0",
-    "@remotion/player": "2.5.0",
-    "@remotion/gif": "2.5.0",
-    "@remotion/cli": "2.5.0",
-    "@remotion/media-utils": "2.5.0",
-    "@remotion/renderer": "2.5.0",
-    "@remotion/bundler": "2.5.0",
-    "remotion": "2.5.0",
+    "@remotion/babel-loader": "2.5.1",
+    "@remotion/three": "2.5.1",
+    "@remotion/player": "2.5.1",
+    "@remotion/gif": "2.5.1",
+    "@remotion/cli": "2.5.1",
+    "@remotion/media-utils": "2.5.1",
+    "@remotion/renderer": "2.5.1",
+    "@remotion/bundler": "2.5.1",
+    "remotion": "2.5.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   },
