--- a/packages/lambda/tsconfig.json
+++ b/packages/lambda/tsconfig.json
@@ -6,7 +6,7 @@
 		"outDir": "dist",
 		"lib": ["es2019", "dom"]
 	},
-	"include": ["src"],
+	"include": ["src", "../renderer/src/test/serve-url.test.ts"],
 	"exclude": ["**/__mocks__/*"],
 	"references": [
 		{"path": "../core"},
