--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -44,6 +44,7 @@ jobs:
 
       - name: Install pnpm
         run: curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm@6
+        shell: bash
 
       - name: Install
         run: pnpm install --frozen-lockfile
