--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@remotion/player": "2.5.4",
     "@remotion/gif": "2.5.4",
     "@remotion/cli": "2.5.4",
+    "@remotion/lambda": "2.5.4",
     "@remotion/media-utils": "2.5.4",
     "@remotion/renderer": "2.5.4",
     "@remotion/bundler": "2.5.4",
