--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -24,16 +24,16 @@
 		"@babel/preset-react": "7.12.13",
 		"@mdx-js/react": "^1.6.21",
 		"@react-three/drei": "^4.3.3",
-		"@remotion/babel-loader": "^2.5.4",
-		"@remotion/bundler": "^2.5.4",
-		"@remotion/cli": "^2.5.4",
-		"@remotion/eslint-config": "^2.5.4",
-		"@remotion/eslint-plugin": "^2.5.4",
-		"@remotion/gif": "^2.5.4",
-		"@remotion/media-utils": "^2.5.4",
-		"@remotion/renderer": "^2.5.4",
-		"@remotion/lambda": "^2.5.4",
-		"@remotion/three": "^2.5.4",
+		"@remotion/babel-loader": "2.5.4",
+		"@remotion/bundler": "2.5.4",
+		"@remotion/cli": "2.5.4",
+		"@remotion/eslint-config": "2.5.4",
+		"@remotion/eslint-plugin": "2.5.4",
+		"@remotion/gif": "2.5.4",
+		"@remotion/media-utils": "2.5.4",
+		"@remotion/renderer": "2.5.4",
+		"@remotion/lambda": "2.5.4",
+		"@remotion/three": "2.5.4",
 		"@types/express": "^4.17.11",
 		"@types/node": "^16.7.5",
 		"@types/styled-components": "^5.1.1",
@@ -42,7 +42,7 @@
 		"mdx-loader": "3.0.2",
 		"polished": "^4.0.5",
 		"prettier": "^2.0.5",
-		"remotion": "^2.5.4",
+		"remotion": "2.5.4",
 		"styled-components": "^5.1.1",
 		"svg-path-properties": "^1.0.4",
 		"three": ">=0.128.0",
