--- a/packages/gif/package.json
+++ b/packages/gif/package.json
@@ -20,7 +20,7 @@
 	"dependencies": {
 		"@react-gifs/tools": "^0.1.1",
 		"lru_map": "^0.4.1",
-		"remotion": "^2.5.4"
+		"remotion": "2.5.4"
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.248",
