--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -16,13 +16,13 @@
 		"url": "https://github.com/remotion-dev/remotion"
 	},
 	"dependencies": {
-		"@remotion/bundler": "^2.5.4",
+		"@remotion/bundler": "2.5.4",
 		"@testing-library/dom": "^8.7.2",
 		"execa": "^4.0.2",
 		"got": "11.8.2",
 		"p-limit": "^3.1.0",
 		"puppeteer-core": "^10.2.0",
-		"remotion": "^2.5.4",
+		"remotion": "2.5.4",
 		"sanitize-filename": "^1.6.3",
 		"serve-handler": "^6.1.3",
 		"xns": "^2.0.7"
