--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -31,6 +31,7 @@
 		"@remotion/eslint-plugin": "2.5.4",
 		"@remotion/gif": "2.5.4",
 		"@remotion/media-utils": "2.5.4",
+		"@remotion/lambda": "2.5.4",
 		"@remotion/renderer": "2.5.4",
 		"@remotion/three": "2.5.4",
 		"@types/express": "^4.17.11",
