--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -24,8 +24,7 @@
 		"puppeteer-core": "^10.2.0",
 		"remotion": "2.5.4",
 		"sanitize-filename": "^1.6.3",
-		"serve-handler": "^6.1.3",
-		"xns": "^2.0.7"
+		"serve-handler": "^6.1.3"
 	},
 	"peerDependencies": {
 		"react": "^17.0.1",
