--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@remotion/example",
 	"private": true,
-	"version": "2.5.4",
+	"version": "2.5.5",
 	"description": "",
 	"license": "SEE LICENSE IN LICENSE.md",
 	"author": "Jonny Burger",
@@ -24,15 +24,15 @@
 		"@babel/preset-react": "7.12.13",
 		"@mdx-js/react": "^1.6.21",
 		"@react-three/drei": "^7.22.7",
-		"@remotion/babel-loader": "2.5.4",
-		"@remotion/bundler": "2.5.4",
-		"@remotion/cli": "2.5.4",
-		"@remotion/eslint-config": "2.5.4",
-		"@remotion/eslint-plugin": "2.5.4",
-		"@remotion/gif": "2.5.4",
-		"@remotion/media-utils": "2.5.4",
-		"@remotion/renderer": "2.5.4",
-		"@remotion/three": "2.5.4",
+		"@remotion/babel-loader": "^2.5.5",
+		"@remotion/bundler": "^2.5.5",
+		"@remotion/cli": "^2.5.5",
+		"@remotion/eslint-config": "^2.5.5",
+		"@remotion/eslint-plugin": "^2.5.5",
+		"@remotion/gif": "^2.5.5",
+		"@remotion/media-utils": "^2.5.5",
+		"@remotion/renderer": "^2.5.5",
+		"@remotion/three": "^2.5.5",
 		"@types/express": "^4.17.11",
 		"@types/node": "^16.7.5",
 		"@types/styled-components": "^5.1.1",
@@ -41,7 +41,7 @@
 		"mdx-loader": "3.0.2",
 		"polished": "^4.0.5",
 		"prettier": "^2.0.5",
-		"remotion": "2.5.4",
+		"remotion": "^2.5.5",
 		"styled-components": "^5.1.1",
 		"svg-path-properties": "^1.0.4",
 		"ts-node": "^9.1.1",
