--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/bundler",
-	"version": "2.5.4",
+	"version": "2.5.5",
 	"description": "Bundler for Remotion",
 	"main": "dist/index.js",
 	"sideEffects": false,
@@ -29,7 +29,7 @@
 		"file-loader": "^6.2.0",
 		"latest-version": "^5.1.0",
 		"react-refresh": "^0.9.0-rc.2",
-		"remotion": "2.5.4",
+		"remotion": "^2.5.5",
 		"semver": "7.3.4",
 		"source-map-loader": "^3.0.0",
 		"style-loader": "^2.0.0",
