--- a/packages/three/package.json
+++ b/packages/three/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/three",
-	"version": "2.5.4",
+	"version": "2.5.5",
 	"description": "Utility functions for using react-three-fiber with remotion",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -17,7 +17,7 @@
 		"url": "https://github.com/remotion-dev/remotion"
 	},
 	"dependencies": {
-		"remotion": "2.5.4"
+		"remotion": "^2.5.5"
 	},
 	"peerDependencies": {
 		"@react-three/fiber": ">=7.0.19",
