--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "2.5.5"
+  "packages": ["packages/*"],
+  "version": "2.5.5",
+  "command": {
+    "publish": {
+      "exact": true
+    }
+  }
 }
