--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -24,7 +24,7 @@
 	],
 	"license": "SEE LICENSE IN LICENSE.md",
 	"dependencies": {
-		"remotion": "^2.5.5"
+		"remotion": "2.5.5"
 	},
 	"peerDependencies": {
 		"react": ">=16.8.0",
